Make plugin compatible with Java 8